# pineapple_hardware

./: .gitignore  CMakeLists.txt  README.md  config.yaml  install_can.sh
include/: CanMotorController.h  DDS_bridge.h  DjiMotor.h  ImuSharedData.h  MotorController.h
include/unitreeMotor/: unitreeMotor.h
src/: DDS_bridge_main.cpp
src/DDS_bridge/: CanMotorController.cpp  DDS_bridge.cpp  MotorController.cpp  example_mti_receive_data.cpp  imu_thread.cpp  test_all_main.cpp  test_can_main.cpp  test_sendrecv.cpp
src/DDS_bridge/plot/: dq_sine2_log.csv  dq_sine3_log.csv  dq_sine_log.csv  dq_step_log.csv  plot_dq_step.py  plot_obs.py
